--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "audiobuffer-to-wav": "^1.0.0",
     "axios": "^1.12.2",
     "event-source-polyfill": "^1.0.31",
+    "file-saver": "^2.0.5",
     "framer-motion": "^12.23.24",
     "html2canvas": "^1.4.1",
     "html2pdf.js": "^0.12.1",
