--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@fontsource/unbounded": "^5.2.8",
     "@mui/icons-material": "^7.3.4",
     "@mui/material": "^7.3.4",
+    "@mui/x-date-pickers": "^8.19.0",
     "@pdfme/common": "^5.4.7",
     "@pdfme/generator": "^5.4.7",
     "@pdfme/schemas": "^5.4.7",
@@ -43,6 +44,7 @@
     "@tailwindcss/vite": "^4.1.14",
     "audiobuffer-to-wav": "^1.0.0",
     "axios": "^1.12.2",
+    "dayjs": "^1.11.19",
     "event-source-polyfill": "^1.0.31",
     "file-saver": "^2.0.5",
     "framer-motion": "^12.23.24",
