--- a/.env
+++ b/.env
@@ -1,3 +1,7 @@
 VITE_REACT_APP_STORAGE_BASE_URL=http://localhost:5173
 VITE_APP_BASE_URL=http://localhost:5000
 VITE_API_2_PDF_API_KEY=d5cff976-3c27-4f11-bcae-8efbb430ffa4
+VITE_PUSHER_APP_ID=2069068
+VITE_PUSHER_KEY=1e3d266e4af5d0f3b503
+VITE_PUSHER_SECRET=04e7aca12a22c0d3d028
+VITE_PUSHER_CLUSTER=ap2
