api url changes

--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
-VITE_REACT_APP_STORAGE_BASE_URL=https://ht-pb.vercel.app/
-# VITE_APP_BASE_URL=http://localhost:5000
-VITE_APP_BASE_URL=https://ht-pb.vercel.app/
+VITE_REACT_APP_STORAGE_BASE_URL=http://localhost:5173
+VITE_APP_BASE_URL=http://localhost:5000
+# VITE_APP_BASE_URL=https://ht-pb.vercel.app/
 VITE_API_2_PDF_API_KEY=d5cff976-3c27-4f11-bcae-8efbb430ffa4
 VITE_PUSHER_APP_ID=2069068
 VITE_PUSHER_KEY=1e3d266e4af5d0f3b503
