--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "event-source-polyfill": "^1.0.31",
     "file-saver": "^2.0.5",
     "framer-motion": "^12.23.24",
+    "html-react-parser": "^5.2.11",
     "html2canvas": "^1.4.1",
     "html2pdf.js": "^0.12.1",
     "jspdf": "^3.0.3",
