--- a/package.json
+++ b/package.json
@@ -59,11 +59,13 @@
     "pdfjs-dist": "^3.11.174",
     "pdfmake": "^0.2.20",
     "pusher-js": "^8.4.0",
+    "quill-delta-to-html": "^0.12.1",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-hook-form": "^7.66.0",
     "react-pdf": "^10.2.0",
     "react-pdf-highlighter": "^8.0.0-rc.0",
+    "react-quill": "^2.0.0",
     "react-quill-new": "^3.7.0",
     "react-redux": "^9.2.0",
     "react-router": "^7.9.4",
